--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
         <item name="android:textColor">@color/white</item>
         <item name="cardBackgroundColor">@color/colorPrimary</item>
         <item name="cardViewStyle">@style/AppTheme</item>
-        <item name="android:windowBackground">@drawable/wallpaper</item>
+        <item name="android:windowBackground">@drawable/bgwallpaper</item>
     </style>
 
     <style name="AppThemee" parent="Theme.AppCompat.Light.NoActionBar">
@@ -20,7 +20,7 @@
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="cardViewStyle">@style/AppThemee</item>
         <item name="cardBackgroundColor">@android:color/white</item>
-        <item name="android:windowBackground">@drawable/wallpaperr</item>
+        <item name="android:windowBackground">@drawable/bgwallpaper</item>
     </style>
 
 
