--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -248,7 +248,7 @@
         <View
             android:layout_width="wrap_content"
             android:layout_height="3dp"
-            android:layout_marginTop="17dp"
+            android:layout_marginTop="22dp"
             android:layout_marginEnd="80dp"
             android:background="@color/colorGrey"/>
     </RelativeLayout>
@@ -520,28 +520,32 @@
             </RelativeLayout>
         </android.support.v7.widget.CardView>
     </LinearLayout>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorAccent"
-                android:textSize="16sp"
                 android:fontFamily="@font/changa_light"
                 android:shadowColor="@color/colorPrimary"
                 android:shadowDx="-2"
                 android:shadowDy="2"
                 android:shadowRadius="1"
-                android:text="@string/menu_set2"/>
+                android:text="@string/menu_set2"
+                android:textColor="@color/colorAccent"
+                android:textSize="16sp" />
+
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="3dp"
-                android:layout_marginTop="17dp"
+                android:layout_marginTop="22dp"
                 android:layout_marginEnd="70dp"
-                android:background="@color/colorGrey"/>
+                android:background="@color/colorGrey" />
         </RelativeLayout>
 
 
@@ -550,32 +554,37 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="8dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
+
             <android.support.v7.widget.CardView
                 android:layout_width="160dp"
                 android:layout_height="120dp"
                 android:layout_weight="1"
-                app:cardCornerRadius="8dp"
                 android:onClick="widgets"
+                app:cardCornerRadius="8dp"
                 app:cardElevation="2dp">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="5dp">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/changa_bold"
-                        android:text="@string/menu_widget"
                         android:gravity="center"
+                        android:text="@string/menu_widget"
                         android:textSize="18sp" />
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="70dp"
                         android:layout_alignParentBottom="true"
                         android:layout_centerInParent="true"
-                        android:gravity="center"
                         android:layout_marginBottom="3dp"
+                        android:gravity="center"
                         android:src="@drawable/widget" />
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
@@ -585,27 +594,30 @@
                 android:layout_height="120dp"
                 android:layout_marginStart="18dp"
                 android:layout_weight="1"
-                app:cardCornerRadius="8dp"
                 android:onClick="wallpapers"
+                app:cardCornerRadius="8dp"
                 app:cardElevation="2dp">
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:padding="5dp">
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/changa_bold"
-                        android:text="@string/menu_wallpaper"
                         android:gravity="center"
+                        android:text="@string/menu_wallpaper"
                         android:textSize="18sp" />
+
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="70dp"
                         android:layout_alignParentBottom="true"
                         android:layout_centerInParent="true"
-                        android:gravity="center"
                         android:layout_marginBottom="3dp"
+                        android:gravity="center"
                         android:src="@drawable/wallpp" />
                 </RelativeLayout>
             </android.support.v7.widget.CardView>
@@ -630,7 +642,7 @@
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="3dp"
-                android:layout_marginTop="17dp"
+                android:layout_marginTop="22dp"
                 android:layout_marginEnd="80dp"
                 android:background="@color/colorGrey"/>
         </RelativeLayout>
