--- a/app/src/main/res/layout/fadl.xml
+++ b/app/src/main/res/layout/fadl.xml
@@ -19,16 +19,17 @@
             android:layout_marginEnd="10dp"
             android:text="Line 2"
             android:textSize="19sp" />
+
         <TextView
             android:id="@+id/thought"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Line 1"
-            android:fontFamily="@font/almushaf"
             android:layout_below="@+id/saidby"
-            android:gravity="center"
             android:layout_centerHorizontal="true"
-            android:textSize="20sp"/>
+            android:fontFamily="@font/uthmanichafs"
+            android:gravity="center"
+            android:text="Line 1"
+            android:textSize="20sp" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
