--- a/app/src/main/res/layout/widget_item.xml
+++ b/app/src/main/res/layout/widget_item.xml
@@ -6,18 +6,18 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="3dp">
+
     <TextView
         android:id="@+id/widget_item_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_margin="5dp"
+        android:fontFamily="@font/uthmanichafs"
         android:gravity="center"
         android:text="Item"
-        android:textSize="20sp"
-        android:fontFamily="@font/almushaf"
         android:textColor="@color/colorPrimary"
-        android:layout_margin="5dp"
-        />
+        android:textSize="20sp" />
     <TextView
         android:id="@+id/widget_item_times"
         android:layout_width="wrap_content"
